HU-6: Implementacion de crear cuenta de empleado