@@ -4,10 +4,10 @@ import com.pragma.user_service.domain.model.User;
 import com.pragma.user_service.infraestructure.driven.db.entity.UserEntity;
 import com.pragma.user_service.domain.model.Role;
 import com.pragma.user_service.infraestructure.driven.db.entity.RoleEntity;
-import java.util.List;
-import java.util.stream.Collectors;
 
 public class UserEntityMapper {
+    private UserEntityMapper() {}
+
     public static User toDomain(UserEntity entity) {
         if (entity == null) return null;
         return User.builder()
@@ -19,7 +19,7 @@ public class UserEntityMapper {
                 .createdAt(entity.getCreatedAt())
                 .updatedAt(entity.getUpdatedAt())
                 .birthDate(entity.getBirthDate())
-                .roles(entity.getRoles() != null ? entity.getRoles().stream().map(UserEntityMapper::roleEntityToDomain).collect(Collectors.toList()) : null)
+                .roles(entity.getRoles() != null ? entity.getRoles().stream().map(UserEntityMapper::roleEntityToDomain).toList() : null)
                 .build();
     }
 
@@ -34,7 +34,7 @@ public class UserEntityMapper {
                 .createdAt(user.getCreatedAt())
                 .updatedAt(user.getUpdatedAt())
                 .birthDate(user.getBirthDate())
-                .roles(user.getRoles() != null ? user.getRoles().stream().map(UserEntityMapper::roleDomainToEntity).collect(Collectors.toList()) : null)
+                .roles(user.getRoles() != null ? user.getRoles().stream().map(UserEntityMapper::roleDomainToEntity).toList() : null)
                 .build();
     }
 
